@@ -1,3 +1,9 @@
+2025-02-25T12:40:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13521443360 # 1147
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-25
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3464 / 0 3466 / +0 +2
+
 2025-02-25T01:39:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13511722288 # 1146
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-25
